--- a/sections/04-implementation.tex
+++ b/sections/04-implementation.tex
@@ -632,12 +632,54 @@ so that all arrays are tracked using a single memory table. The \code{Typeable}
 constraint permits a type-safe cast to later recover the existentially
 quantified array type. Furthermore the host arrays are tagged with a specific
 CUDA context, which is used to support mapping the host array to multiple
-devices and execution contexts. The implementation of the lookup operation
-follows closely that of \citet{PeytonJones:2000ks}.
+devices and execution contexts. Looking up an array in the memory table
+demonstrates the procedure for working with weak pointers.
+% The implementation of the lookup operation follows closely that of
+% \citet{PeytonJones:2000ks}.
+%
+\begin{lstlisting}[style=haskell]
+lookup :: (Typeable a, Typeable b)
+       => Context
+       -> MemoryTable
+       -> ArrayData a
+       -> IO (Maybe (DevicePtr b))
+lookup ctx (MemoryTable ref _ _) arr = do
+  sa <- makeStableArray ctx arr                                         -- (1)
+  mw <- withIORef ref (`HashTable.lookup` sa)
+  case mw of
+    Nothing              -> return Nothing
+    Just (DeviceArray w) -> do                                          -- (2)
+      mv <- deRefWeak w
+      case mv of
+        Just v | Just p <- gcast v -> return (Just p)
+               | otherwise         -> error "lookup: type mismatch"
+        Nothing                    -> do                                -- (3)
+          sa' <- makeStableArray ctx arr
+          error ("lookup: dead weak pair: " ++ show x)
+\end{lstlisting}
+%
+\begin{enumerate}
+\item The memory table maps a stable name of the argument host-side array to a
+    weak pointer to the corresponding device array of a given context.
 
-Similarly, the nursery is a hash table from array sizes to a non-empty list of
-pointers to arrays of that size. Keys are additionally tagged with the device
-execution context within which they are allocated.
+\item If the lookup is successful, we can attempt to dereference the weak
+    pointer to find the actual value. On success, A type-safe cast is used to
+    recover the existentially quantified type of the array data.
+
+\item However there is an awkward race condition here, because at the moment
+    \code{deRefWeak} is called there might, conceivably, be no further
+    references to the host array \code{arr}. If that is so, and a garbage
+    collection intervenes, the weak pointer might be tombstoned before
+    \code{deRefWeak} gets to it. In this unusual case we throw an error, but in
+    doing so this makes \code{arr} reachable in the continuation of
+    \code{deRefWeak}, and thus ensures \code{deRefWeak} will always succeed.
+    This sort of weirdness, typical of the world of weak pointers, is why we can
+    not reuse the stable name \code{sa} computed above in the error message.
+\end{enumerate}
+
+The nursery is a hash table from array sizes to a non-empty list of pointers to
+arrays of that size. Keys are additionally tagged with the device execution
+context within which they are allocated.
 %
 \begin{lstlisting}[style=haskell]
 type NRS        = IORef ( HashTable (CUDA.Context, Int) (FullList () (DevicePtr ())) )
@@ -690,7 +732,7 @@ malloc ctx mt@(MemoryTable _ _ nursery) ad n = do
 
 \end{enumerate}
 
-Finally we present the finaliser that is invoked when the host array is garbage
+Finally, we present the finaliser that is invoked when the host array is garbage
 collected by the Haskell runtime. The finaliser refers to its surrounding
 execution context via weak pointers, otherwise these values will be kept alive
 until all keys have become unreachable.
@@ -703,17 +745,16 @@ finalizer :: Weak CUDA.Context          -- execution context this array is alloc
           -> Int                        -- array size in bytes
           -> IO ()
 finalizer weak_ctx weak_tbl weak_nrs key ptr bytes = do
-  mr <- deRefWeak weak_tbl                              -- (1)
+  mr <- deRefWeak weak_tbl                                              -- (1)
   case mr of
     Nothing  -> return ()
     Just tbl -> withIORef tbl (`HashTable.delete` key)
-
-  mc <- deRefWeak weak_ctx                              -- (2)
+  --
+  mc <- deRefWeak weak_ctx                                              -- (2)
   case mc of
     Nothing  -> return ()
     Just ctx -> do
-
-      mn <- deRefWeak weak_nrs                          -- (3)
+      mn <- deRefWeak weak_nrs                                          -- (3)
       case mn of
         Nothing  -> bracket_ (CUDA.push ctx) CUDA.pop (CUDA.free ptr)
         Just nrs -> Nursery.stash bytes ctx nrs ptr
